Linear Regression Model done
Feature analysis, and linear reg model done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Arjun Prasad\\anaconda3\\envs\\DeepLearning_Tensorflow\\python.exe"
+    "python.pythonPath": "C:\\Users\\Arjun Prasad\\anaconda3\\envs\\DeepLearning_Tensorflow\\python.exe",
+    "git.ignoreLimitWarning": true
 }
